logging.level.org.springframework.security.web.firewall.RequestRejectedException=off BoundServices on lombok-1.18.30 Delete Bonjour